     `DT[forder(DT, x, -y)]`. It can be turned off by setting datatable.optimize to < 1L. For 
     example, it resuls in 20x speedup on data.table of 10 million rows with 2 integer columns.
     
  o  mult="all" -vs- mult="first"|"last" now return consistent types and columns, #5378. Thanks
     to Michele Carriero for highlighting.


BUG FIXES

  o  When joining to fewer columns than the key has, using one of the later key columns
     explicitly in j repeated the first value. A problem introduced by v1.9.2 and not
     caught by our 1,220 tests, or tests in 37 dependent packages. Test added. Many
     thanks to Michele Carriero for reporting.
       DT = data.table(a=1:2, b=letters[1:6], key="a,b")    # keyed by a and b
       DT[.(1), list(b,...)]    # correct result again (joining just to a not b but using b)

  o  setkey works again when a non-key column is type list (e.g. each cell can itself be a
     vector), #5366. Test added. Thanks to James Sams, Michael Nelson and Musx for the
     reproducible examples.
       http://stackoverflow.com/questions/22186798/r-data-table-1-9-2-issue-on-setkey

  o  data.table(list()), data.table(data.table()) and data.table(data.frame()) now return
     a null data.table (no columns) rather than one empty column, #5377. Test added. 
     Thanks to Shubh Bansal for reporting.

  o  unique(NULL data.table) returns a null data.table, #5405. Thanks to agstudy for reporting.

  o  data.table(.) converted POSIXlt to POSIXct, consistent with base:::data.frame(.), but now
     also provides a helpful warning instead of coercing silently, #5321.
     Thanks to Brodie Gaslam, Patrick and Ragy Isaac for reporting.
       http://stackoverflow.com/questions/21487614/error-creating-r-data-table-with-date-time-posixlt
       http://stackoverflow.com/questions/21320215/converting-from-data-frame-to-data-table-i-get-an-error-with-head
